# Metaspire

./: cabal.project  flake.nix  metaspire.cabal
app/: Main.hs
p2p/: p2p.cabal
p2p/app/client/: Main.hs
p2p/app/hole-puncher/: Main.hs
p2p/src/: P2P.hs
